cropping hero, fixing mobile view

--- a/css/style.css
+++ b/css/style.css
@@ -1734,7 +1734,14 @@ ul {
     padding: 0 20px;
   }
   .hero-content {
-    display: none;
+      display: block;
+      margin-left: auto;
+      margin-right: auto;
+      margin-top: 20vh;
+      width: 100%;
+  }
+  .site-btn {
+    margin-bottom: 10px;
   }
   .intro-video {
     margin-top: -30px;
